--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body> 
   <header>
    <nav>
-    <a href="/">webstudio</a>
+    <a href="./index.html">WebStudio</a>
     <ul>
       <li> <a href="#Studio">Studio</a></li>
       <li> <a href="#Portfolio">Portfolio</a></li>
@@ -20,7 +20,7 @@
    <address>
     <ul>
       <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li> <a href="tel:+11(000)1111111">+11(000)1111111</a></li>
+      <li> <a href="tel:+110001111111">+110001111111</a></li>
     </ul>
    </address>
   </header>
@@ -33,6 +33,7 @@
 
     <section>
       <!--Features-->
+      <h2>Features</h2>
       <ul>
         <li> <h3>Strategy</h3>
           <p>Our goal is to identify the business
@@ -55,31 +56,31 @@
     <section>
     <h2>What are we doing</h2>
     <ul>
-      <li> <img src="/img/monitor.jpg" alt="monitor" width="360" height="300">
+      <li> <img src="./img/monitor.jpg" alt="monitor" width="360" height="300">
       </li>
-      <li> <img src="/img/phone.jpg" alt="phone" width="360" height="300">
+      <li> <img src="./img/phone.jpg" alt="phone" width="360" height="300">
       </li>  
-      <li> <img src="/img/phonescreen.jpg" alt="phonescreen" width="360" height="300">
+      <li> <img src="./img/phonescreen.jpg" alt="phonescreen" width="360" height="300">
       </li>
           </ul>
     </section>
     <section>
       <h2>Our Team</h2>
       <ul>
-       <li> <img src="/img/Mark.jpg" alt="Mark Guerrero" width="264" height="260">
-        <h4>Mark Guerrero</h4>
+       <li> <img src="./img/Mark.jpg" alt="Mark Guerrero" width="264" height="260">
+        <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
        </li>
-      <li> <img src="/img/Tom.jpg" alt="Tom Ford" width="264" height="260">
-        <h4>Tom Ford</h4>
+      <li> <img src="./img/Tom.jpg" alt="Tom Ford" width="264" height="260">
+        <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
       </li>
-        <li> <img src="/img/Camila.jpg" alt="Camila Garcia" width="264" height="260">
-        <h4>Camila Garcia</h4>
+        <li> <img src="./img/Camila.jpg" alt="Camila Garcia" width="264" height="260">
+        <h3>Camila Garcia</h3>
         <p>Marketing</p>
         </li>
-        <li> <img src="/img/Daniel.jpg" alt="Daniel Wilson" width="264" height="260">
-          <h4>Daniel Wilson</h4>
+        <li> <img src="./img/Daniel.jpg" alt="Daniel Wilson" width="264" height="260">
+          <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
       </ul>
@@ -87,7 +88,7 @@
   </main>
          
             <footer>
-              <h3>webstudio</h3>
+              <a href="./index.html">WebStudio</a>
               <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
