--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <address>
     <ul>
       <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-      <li> <a href="tel:+110001111111">+110001111111</a></li>
+      <li> <a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
     </ul>
    </address>
   </header>
@@ -56,30 +56,30 @@
     <section>
     <h2>What are we doing</h2>
     <ul>
-      <li> <img src="./img/monitor.jpg" alt="monitor" width="360" height="300">
+      <li> <img src="./images/monitor-min.jpg" alt="monitor" width="360" height="300">
       </li>
-      <li> <img src="./img/phone.jpg" alt="phone" width="360" height="300">
+      <li> <img src="./images/phone-min.jpg" alt="phone" width="360" height="300">
       </li>  
-      <li> <img src="./img/phonescreen.jpg" alt="phonescreen" width="360" height="300">
+      <li> <img src="./images/phonescreen-min.jpg" alt="phonescreen" width="360" height="300">
       </li>
           </ul>
     </section>
     <section>
       <h2>Our Team</h2>
       <ul>
-       <li> <img src="./img/Mark.jpg" alt="Mark Guerrero" width="264" height="260">
+       <li> <img src="./images/Mark-min.jpg" alt="Mark Guerrero" width="264" height="260">
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
        </li>
-      <li> <img src="./img/Tom.jpg" alt="Tom Ford" width="264" height="260">
+      <li> <img src="./images/Tom-min.jpg" alt="Tom Ford" width="264" height="260">
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
       </li>
-        <li> <img src="./img/Camila.jpg" alt="Camila Garcia" width="264" height="260">
+        <li> <img src="./images/Camila-min.jpg" alt="Camila Garcia" width="264" height="260">
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
         </li>
-        <li> <img src="./img/Daniel.jpg" alt="Daniel Wilson" width="264" height="260">
+        <li> <img src="./images/Daniel-min.jpg" alt="Daniel Wilson" width="264" height="260">
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
         </li>
